// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterPicker rendering should work with full props 1`] = `
<div
  className="modal-dialog nice-modal viewport-center accent wide"
>
  <div
    className="nice-modal-content"
  >
    <div
      className="nice-modal-header"
    >
      <a
        className="nice-modal-close"
        onClick={[Function]}
      >
        <i
          className="icon fa-times"
        />
      </a>
      <h4>
        Renamed dialog
      </h4>
    </div>
    <div
      className="nice-modal-sub"
    >
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Filter..."
        type={undefined}
        value=""
      />
    </div>
    <div
      className="nice-modal-body overflow-y-auto overflow-x-hidden"
    >
      <div
        className="character-picker__row"
      >
        <div
          className="character inline"
        >
          Testy McTestface, Level 1 
          <div
            className="list-label inline"
          >
            male
          </div>
           Human Fighter 
          (
          <div
            className="list-label inline"
          >
            true neutral
          </div>
          )
          <div
            className="nice-progress brand"
          >
            <div
              className="nice-progress-fill"
              style={
                Object {
                  "height": "1.25rem",
                  "width": "75%",
                }
              }
            >
              Level 1 (3 / 4)
            </div>
          </div>
        </div>
        <div
          className="actions"
        >
          <div
            className="base-link-group nice-btn-group"
          >
            <a
              className="cursor-pointer nice-btn icon fa-user-secret"
              onClick={[Function]}
            >
              Pick
            </a>
          </div>
        </div>
      </div>
      <div
        className="character-picker__row"
      >
        <div
          className="character inline"
        >
          Beasty McBeastface, Level 2 
          <div
            className="list-label inline"
          >
            female
          </div>
           Half-Orc Druid 
          (
          <div
            className="list-label inline"
          >
            neutral good
          </div>
          )
          <div
            className="nice-progress good"
          >
            <div
              className="nice-progress-fill"
              style={
                Object {
                  "height": "1.25rem",
                  "width": "83.33333333333334%",
                }
              }
            >
              Level 2 (500 / 600)
            </div>
          </div>
        </div>
        <div
          className="actions"
        >
          <div
            className="base-link-group nice-btn-group"
          >
            <a
              className="cursor-pointer nice-btn icon fa-user-secret"
              onClick={[Function]}
            >
              Pick
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="nice-modal-footer"
    >
      <div
        className="base-link-group nice-btn-group pull-right"
      >
        <a
          className="cursor-pointer nice-btn icon fa-cross"
          onClick={[Function]}
        >
          Cancel
        </a>
        <a
          className="cursor-pointer nice-btn icon fa-check primary"
          onClick={[Function]}
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`CharacterPicker rendering should work with minimum props 1`] = `
<div
  className="modal-dialog nice-modal viewport-center accent wide"
>
  <div
    className="nice-modal-content"
  >
    <div
      className="nice-modal-header"
    >
      <h4>
        Pick a Character
      </h4>
    </div>
    <div
      className="nice-modal-sub"
    >
      <input
        className="nice-form-control"
        disabled={undefined}
        onChange={[Function]}
        onKeyPress={null}
        placeholder="Filter..."
        type={undefined}
        value=""
      />
    </div>
    <div
      className="nice-modal-body overflow-y-auto overflow-x-hidden"
    />
    <div
      className="nice-modal-footer"
    >
      <div
        className="base-link-group nice-btn-group pull-right"
      >
        <a
          className="cursor-pointer nice-btn icon fa-check primary"
          onClick={[Function]}
        >
          Done
        </a>
      </div>
    </div>
  </div>
</div>
`;
